Added Shredded_chicken_tacos.html and tiramisu.html

--- a/recipes/chicken_tikka_masala.html
+++ b/recipes/chicken_tikka_masala.html
@@ -11,7 +11,7 @@
     <h2>Description</h2>
     <p>
         Chicken tikka masala is composed of chicken tikka, boneless chunks of chicken marinated in spices and yogurt that are roasted in an oven, served in a creamy sauce. A tomato and coriander sauce is common, but no recipe for chicken tikka masala is standard; a survey found that of 48 different recipes, the only common ingredient was chicken. The sauce usually includes tomatoes (frequently as purée), cream, coconut cream and a masala spice mix. The sauce and chicken pieces may be coloured orange using foodstuffs such as turmeric, paprika, tomato purée or with food dye.
-        <h3>Ingredient:</h3>
+        <h3>Ingredients:</h3>
         <ul>
             <li>1 cup yogurt</li>
             <li>1 tablespoon lemon juice</li>
