--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <p><ul>
         <li><a href="./recipes/chicken_tikka_masala.html">Chicken Tikka Masala</a></li>
+        <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+        <li><a href="./recipes/shredded_chicken_tacos.html">Shredded Chicken Tacos</a></li>
     </ul></p>
 </body>
 </html>
